added signup to index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="product.html">Product</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="login.html">Login</a></li>
+            <li><a href="pages/product.html">Product</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="pages/login.html">Login</a></li>
+            <li><a href="pages/signup.html"></a>Signup</li>
         </ul>
     </nav>
     <img src="https://th.bing.com/th/id/R.c655f6ad4bf1a12f920298b6e087200b?rik=KNLe3mk2jiJUjA&riu=http%3a%2f%2fcontent.kens5.com%2fphoto%2f2017%2f10%2f22%2fvegetables_1508727313637_11456014_ver1.0.jpg&ehk=Fq8Eoa9aKzsUPDZ8DtBhyVemrHDc8oqvw4qs3PvJii8%3d&risl=&pid=ImgRaw&r=0" style="width: 300px; height: 300px;" alt="">
@@ -35,5 +36,6 @@
     <i class="fa-brands fa-youtube"></i>
     <i class="fa-brands fa-facebook"></i>
     <i class="fa-brands fa-twitter"></i>
+
 </body>
 </html>
