--- a/pages/login.html
+++ b/pages/login.html
@@ -8,14 +8,15 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="product.html">Product</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Signup</a></li>
         </ul>
     </nav>
     <h2>Hit to login our page,</h2>
     <p> Welome, thanks for logging in</p>
-    <button><a href="..index.html">click to home</a></button>
+    <button><a href="../index.html">click to home</a></button>
 </body>
 </html>
