--- a/pages/product.html
+++ b/pages/product.html
@@ -8,10 +8,11 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="product.html">Product</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Signup</a></li>
         </ul>
     </nav> 
     <h2>Our Raw Food Product</h2>
