--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact page</title>
+    <title>contact page</title><script src="https://kit.fontawesome.com/8e22a112dc.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -28,5 +28,11 @@
         </div>
         <textarea name="" id="" cols="30" rows="10"></textarea>
     </form>
+    <footer>Please contact us on our socials.👍❤</footer>
+    <i class="fa-brands fa-instagram"></i>
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-twitter"></i>
+
 </body>
 </html>
