added footer to login

--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login page</title>
+    <title>Login page</title><script src="https://kit.fontawesome.com/8e22a112dc.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -18,5 +18,11 @@
     <h2>Hit to login our page,</h2>
     <p> Welome, thanks for logging in</p>
     <button><a href="../index.html">click to home</a></button>
+    <footer>Please contact us on our socials.👍❤</footer>
+    <i class="fa-brands fa-instagram"></i>
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-twitter"></i>
+
 </body>
 </html>
