added footer to product

--- a/pages/product.html
+++ b/pages/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product page</title>
+    <title>Product page</title><script src="https://kit.fontawesome.com/8e22a112dc.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -43,6 +43,14 @@
  <img src="https://th.bing.com/th/id/OIP.HU33pK8VH6AgFBBhIk7IkAHaHa?w=1024&h=1024&rs=1&pid=ImgDetMain"style="width:190px ;" alt="">
  <h3>Okro</h3>
  <p><a href="https://en.wikipedia.org/wiki/Okra" target="_blank">okro</a></p>Okro, also known as okra, gumbo, or lady's fingers, it is a versatile vegetable found around the world. It is often used for making soups, stews and sourse. In Nigeria, it is a key ingresdient in popular dishes like okra soup and ogbono-soup.
+
+ 
+
+ <footer>Please contact us on our socials.👍❤</footer>
+ <i class="fa-brands fa-instagram"></i>
+ <i class="fa-brands fa-youtube"></i>
+ <i class="fa-brands fa-facebook"></i>
+ <i class="fa-brands fa-twitter"></i>
 
 </body>
 </html
