added new work to the index.html and src/index.js

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
     <h3>African vegetables </h3>
   </div>
   </div>
-  <button>Load more</button>
+  <!-- selecting the load me button -->
+  <button id="load">Loadmore</button>
   <!-- this is another set of images  -->
   <div class="big-div" id="new_images">
     <div>
