--- a/pages/product.html
+++ b/pages/product.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product page</title><script src="https://kit.fontawesome.com/8e22a112dc.js" crossorigin="anonymous"></script>
+    <style>
+  /* styling the centered heading  */
+ .raw{
+    text-align: center;
+    font-size: 40px;
+    font-family: cursive;
+}
+.products{
+    background-color: rgb(21, 108, 189);
+    color: white;
+}
+.span a{
+    font: size 30px; 
+    color: black;
+}
+.learn a{
+    text-decoration: none;
+}
+.learn{
+    background-color: black;
+    color: black;
+    border: 3px solid grey;
+    border-radius: 9px;
+    padding: 6px;
+           
+}
+
+    </style>
 </head>
 <body>
     <nav>
@@ -15,34 +43,59 @@
             <li><a href="signup.html">Signup</a></li>
         </ul>
     </nav> 
-    <h2>Our Raw Food Product</h2>
+    <h2 class="raw"><i>Our Raw Food Product</i></h2>
     <img src="https://www.bing.com/th?id=OIP.2uTK0tgKfrMydCpUWX2E7wHaE0&w=208&h=150&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2" alt=""> 
-    <h2>Afican yams</h2>
-    <button>   <a href="https://simple.wikipedia.org/wiki/Yam" target="_blank">Yam</a></button>Yams are native to warmer regions of both hemispheres, and several species are cultivated us <b>staple food croops in the tropics.</b> In certain tropical cultures, notably in West Africa and new Guinea, the yamis the primary agricultural commodity and the focal point of elaborate. Yams are consumed as cooked starchy vegetables.
+    <h2 class="products">African yams</h2>
+    <p><span class="span"><a href="https://simple.wikipedia.org/wiki/Yam" target="_blank">Yams </a></span>
+        are native to warmer regions of both hemispheres, and several species are cultivated us 
+        <b>staple food croops in the tropics.</b> In certain tropical cultures, notably in 
+        West Africa and new Guinea, the yamis the primary agricultural commodity and the focal 
+        point of elaborate. Yams are consumed as cooked starchy vegetables.
+    </p> 
     <p>
-        <button><a href="contact.html">learn more</a></button>
+        <button class="learn"><a href="contact.html">Learn More</a></button>
     </p>
     <hr>
     <h3>Our Raw Food Products</h3>
     <img src="https://th.bing.com/th/id/R.21614c95d5d13082be17fa1a2892461a?rik=JUipVJ0Ft1b%2fcQ&pid=ImgRaw&r=0" style="width: 190px;" alt="">
-    <h3>African Plantain</h3>
-    <p><a href="https://en.wikipedia.org/wiki/Plantain" target="_blank">plantains</a></p>Plantains are major group of banana varieties(genus Musa) that are staple foods in many tropical areas. This edible fruit of plantain bananas has more starch than the common desert banana and is not eaten raw. Because plantains have the most starch before they ripen, they are usually cooked green, either <b>boiled or fried,</b> in sasvory dishes. The ripe fruits are mildly sweet and are often cooked with coconut juice or sugar as a flavouring. Plantains may also be dried for later use in cooking or ground for use as a meal, which can be further refined to a flour. 
+    <h3 class="products">African Plantain</h3>
+    <p><span class="span"><a href="https://en.wikipedia.org/wiki/Plantain" target="_blank">Plantains</a></span>
+    are major group of banana varieties(genus Musa) that are staple foods in many tropical areas.
+     This edible fruit of plantain bananas has more starch than the common desert banana and is not eaten raw.
+     Because plantains have the most starch before they ripen, they are usually cooked green, either <b>boiled or fried,</b> in sasvory dishes. 
+     The ripe fruits are mildly sweet and are often cooked with coconut juice or sugar as a flavouring.
+     Plantains may also be dried for later use in cooking or ground for use as a meal, which can be further refined to a flour. 
+    </p>
     <p>
-        <button><a href="contact.html">learn more</a></button>
+        <button class="learn"><a href="contact.html">Learn More</a></button>
     </p>
     <hr>
     <h3>Our Raw Food Products</h3>
     <img src="https://th.bing.com/th/id/R.7f1a40afd1e14b9eb7a7fa1f53e6ee1e?rik=xP4dP8SfEqmepg&pid=ImgRaw&r=0"style="width: 190px;">
-    <h3>African white-garden-egg</h3>
-    <p><a href="https://www.bing.com/search?q=wikipedia+eggplant" target="_blank">eggplants</a></p> are a type of eggplant used as a food crop in several countries across Africa. These small, white fruits have a teardrop or roundish shape and are valued for their bitterness. Garden egg is indegenous to Sub-Saharan Africa and can be stored for up to three months by allowing it to dry, which is particularly usefu; in the tropical regions where refrigerators may be limited. In Ghana, garden eggs is one of the <b>three most consumed vegetables,</b> alongside tomatoes and peppers. It is used in stews and can also be eaten raw. Interestingly, the stems and leaves of garden eggs are consumed in some African countries, although not in Ghana. Due to its spongy texture, garden egg is sometimes used as a less expensive meat substitute, as it absorbs other lavours well.
+    <h3 class="products">African white-garden-egg</h3>
+    <p><span class="span"><a href="https://www.bing.com/search?q=wikipedia+eggplant" target="_blank">Eggplants</a></span>
+     are a type of eggplant used as a food crop in several countries across Africa.
+     These small, white fruits have a teardrop or roundish shape and are valued for their bitterness.
+     Garden egg is indegenous to Sub-Saharan Africa and can be stored for up to three months by allowing it to dry, which is particularly usefu; in the tropical regions where refrigerators may be limited.
+     In Ghana, garden eggs is one of the <b>three most consumed vegetables,</b> alongside tomatoes and peppers. It is used in stews and can also be eaten raw. Interestingly, the stems and leaves of garden eggs are consumed in some African countries, although not in Ghana.
+     Due to its spongy texture, garden egg is sometimes used as a less expensive meat substitute, as it absorbs other lavours well.
+    </p>
+
  <p>
-    <button><a href="contact.html">learn more</a></button>
+    <button class="learn"><a href="contact.html">Learn More</a></button>
  </p>
  <hr>
  <h3>Our Raw Food Product</h3>
  <img src="https://th.bing.com/th/id/OIP.HU33pK8VH6AgFBBhIk7IkAHaHa?w=1024&h=1024&rs=1&pid=ImgDetMain"style="width:190px ;" alt="">
- <h3>Okro</h3>
- <p><a href="https://en.wikipedia.org/wiki/Okra" target="_blank">okro</a></p>Okro, also known as okra, gumbo, or lady's fingers, it is a versatile vegetable found around the world. It is often used for making soups, stews and sourse. In Nigeria, it is a key ingresdient in popular dishes like okra soup and ogbono-soup.
+ <h3 class="products">Okro</h3>
+ <p><span class="span"><a href="https://en.wikipedia.org/wiki/Okra" target="_blank">Okro</a></span>
+ Okro, also known as okra, gumbo, or lady's fingers,
+  it is a versatile vegetable found around the world. It is often used for making soups, stews and sourse.
+ In Nigeria, it is a key ingresdient in popular dishes like okra soup and ogbono-soup.
+</p>
+<p>
+    <button class="learn"><a href="contact.html">Learn More</a></button>
+ </p>
 
  
 
