added some changes

--- a/pages/about.html
+++ b/pages/about.html
@@ -62,7 +62,7 @@
     </nav> 
     <h1 style="text-align: center;"><i>Did you know facts about Africa foods?</i></h1>
 
-    <p>Africa is home to leafy greens, root vegetables, mashed tubers and beans, and many different
+    <p>Africa is a home to leafy greens, root vegetables, mashed tubers and beans, and many different
       plant crops across its lands. In Central and West Africa, traditional meals were often based on
       hearty vegetable soups and stews, full of spices and aromas, poured over boiled and mashed tubers
       and grains. </p>
@@ -73,7 +73,8 @@
         <p>Africa dishes often incorporate a harmonious blend of savory, spicy, tangy, and earthy, 
         flavors. Spices and herbs like ginger, garlic, chilies, cloves, coriander, and cumin are commonly
          used to create aropmatic and well-balanced dishes.</p> 
-      <h1 style="text-align: center; background-color: darkorchid; "><b>Curious about food from the African continent?</b><i>check out our delicious meals</i></h1>  
+      <h1 style="text-align: center; background-color: darkorchid; "><b>Curious about food from the African continent?</b><i>check out our delicious meals</i></h1>
+      <img src="../images/gh jollof.jfif">
 <!-- <img src="../images/"> -->
     <div class="footer">
       <footer>
