--- a/pages/login.html
+++ b/pages/login.html
@@ -42,7 +42,17 @@
   margin: 20px;
   padding: 10px;
   font-size: 30px;
-
+}
+form{
+  line-height: 50px;
+}
+.fa-solid{
+  font-size: 15em;
+}
+.login{
+  display: flex;
+  gap: 30px;
+  justify-content: space-evenly;
 }
     </style>
     </head>
@@ -60,14 +70,24 @@
               <li  class="nav"><a href="signup.html"  style="text-decoration: none;">Signup</a></li>
        </ul>
     </nav>
-    <h2>Hit to login our page,</h2>
-    <p> Welome, thanks for logging in</p>
-    <button><a href="../index.html">click to home</a></button>
-    <footer>Please contact us on our socials.👍❤</footer>
-    <i class="fa-brands fa-instagram"></i>
-    <i class="fa-brands fa-youtube"></i>
-    <i class="fa-brands fa-facebook"></i>
-    <i class="fa-brands fa-twitter"></i>
+    <div class="login">
+  <div><i class="fa-solid fa-right-to-bracket"></i></div>
+  <form>
+     <div>
+      <h1>Log in to African Food Products</h1>
+        <label for="">Your Email</label>
+        <input type="text" placeholder="Email">
+    </div>
+
+    <div>
+     <label for="">Your Password</label>
+        <input type="text" placeholder="Password">
+    </div>
+    <div>
+      <textarea name="Enter a text here" id="" cols="30" rows="10"placeholder="Enter a text here"></textarea>
+    </div>
+  </form>
+  </div>
 
     <div class="footer">
       <footer>
