added more changes to my page

--- a/pages/about.html
+++ b/pages/about.html
@@ -43,6 +43,20 @@
   padding: 10px;
   font-size: 30px;
 }
+#about{
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+.APT{
+  border: 5px solid  rgb(204, 22, 159);
+  border-radius: 5px;
+}
+.APT a{
+  color: black;
+  text-decoration: none;
+}
+
     
  </style>
 </head>
@@ -62,20 +76,63 @@
     </nav> 
     <h1 style="text-align: center;"><i>Did you know facts about Africa foods?</i></h1>
 
-    <p>Africa is a home to leafy greens, root vegetables, mashed tubers and beans, and many different
+    <p style="font-size: larger;">Africa is a home to leafy greens, root vegetables, mashed tubers and beans, and many different
       plant crops across its lands. In Central and West Africa, traditional meals were often based on
       hearty vegetable soups and stews, full of spices and aromas, poured over boiled and mashed tubers
       and grains. </p>
-      <p>Africa cooking starts as a vegan base, packed with varieties of vegetables, and then the 
+      <p style="font-size: larger;">Africa cooking starts as a vegan base, packed with varieties of vegetables, and then the 
         meat is added. Hence,vegetables are widely eaten and consumed through soups or stews. 
         African also tend to consume more beans through a plethora of dishes such moi moi, rice and
          beans, akara, and varities of bean porridge</p>
-        <p>Africa dishes often incorporate a harmonious blend of savory, spicy, tangy, and earthy, 
+        <p style="font-size: larger;">Africa dishes often incorporate a harmonious blend of savory, spicy, tangy, and earthy, 
         flavors. Spices and herbs like ginger, garlic, chilies, cloves, coriander, and cumin are commonly
          used to create aropmatic and well-balanced dishes.</p> 
       <h1 style="text-align: center; background-color: darkorchid; "><b>Curious about food from the African continent?</b><i>check out our delicious meals</i></h1>
-      <img src="../images/gh jollof.jfif">
-<!-- <img src="../images/"> -->
+       <div id="about">
+      <div>
+      <img src="../images/fine jollof.jfif"  style="width: 400px; height: 400px;">
+        <h1>Jollof</h1>
+      </div>
+      <div>
+        <img src="../images/fine fufu.jfif" style="width: 400px; height: 400px;" alt="">
+        <h1>Fufu</h1>
+      </div>
+      <div>
+        <img src="../images/fine ampesi.jpg" style="width: 400px; height: 400px;" alt="">
+        <h1>Ampesi</h1>
+      </div>
+      <div>
+        <img src="../images/fine gob3.jfif" style="width: 400px; height: 400px;" alt="">
+        <h1>Plantain,Beans,Gari</h1>
+      </div>
+      <div>
+        <img src="../images/tuo zaafi.jfif" style="width: 400px; height: 400px;" alt="">
+        <h1>Tuo Zaafi</h1>
+      </div>
+      <div>
+        <img src="../images/fine banku.jfif" style="width: 400px; height: 400px;" alt="">
+        <h1>Banku</h1>
+      </div>
+      <div>
+        <img src="../images/fine fruits.jpg" style="width: 400px; height: 400px;" alt="">
+        <h1>Fruits</h1>
+      </div>
+      <div>
+        <img src="../images/fine juices.jpg" style="width: 400px; height: 400px;" alt="">
+        <h1>Juice </h1>
+      </div>
+      <div>
+        <img src="../images/desserts.jfif" style="width: 400px; height: 400px;" alt="">
+        <h1>Desserts</h1>
+      </div>
+    </div>
+    <p style="font-size: larger;">These and many foods are the end products of the raw  Africa products. These dishes are served
+       at various occasions and its lovers really enjoy the meal. Africa continent delivers delicious and 
+       healthy food for the nourishment of its people. African meals are tasty, appetizing, scrumptious, yummy, 
+      delectable, mouth-watering, fit for king and everyone as well, enjoyable and highly pleasant to taste.</p>
+      <h1>check the raw foods from the product page <button class="APT"><a href="../pages/product.html">The Product Page</a></button></h1>
+
+       
     <div class="footer">
       <footer>
       <h4>Please contact us on our socials.👍❤</h4>
