--- a/pages/login.html
+++ b/pages/login.html
@@ -54,6 +54,10 @@ form{
   gap: 30px;
   justify-content: space-evenly;
 }
+input{
+  height: 30px;
+  width: 200px;
+}
     </style>
     </head>
 <body style ="background-color: blueviolet;">
