--- a/pages/signup.html
+++ b/pages/signup.html
@@ -43,10 +43,17 @@
 .whole{
   display: flex;
   gap: 50px;
+  margin-left: 300px;
 }
 .formmain{
   background-color: green;
   padding: 30px 20px;
+  line-height: 50px;
+  
+}
+input{
+  height: 30px;
+  width: 300px;
 }
   </style>
   </head>
